--- a/TestGit.html
+++ b/TestGit.html
@@ -11,8 +11,8 @@
 
   <script>
     function f1(){
-      document.getElementById('d1').innerHTML="Hello world"
-    }
+    }      document.getElementById('d1').innerHTML="Hello feature1" 
+
     f1()
   </script>
 </body>
