--- a/TestGit.html
+++ b/TestGit.html
@@ -11,7 +11,7 @@
 
   <script>
     function f1(){
-      document.getElementById('d1').innerHTML="Hello feature2" 
+      document.getElementById('d1').innerHTML="Hello world"
     }
     f1()
   </script>
